<?xml version="1.0"?>
<package format="3">
  <name>data_log</name>
  <version>0.0.1</version>
  <description>Sensor‐synchronized logger for PX4 topics</description>
  <maintainer email="you@your.email">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
